<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contract Out</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="info">About</string>
    <string name="remember_username_password">Remember Username/Password</string>
    <string name="password">Password</string>
    <string name="this_is_the_info_about_this_app">\tContract Out allows users to easily browse different contractors for specific jobs and set up appointments.\n\n\t
     If you have a job that requires the work of a professional, Contract Out makes it easy to look for these professionals, contact them, and set up an appointment with them to get the job done!\n\n\t
     Contract Out allows users to easily browse different contractors for specific jobs and set up appointments.\n\n\t
     The search feature allows users to obtain a list of many contractors within a specific area.\n\n\t
     In addition to displaying contact information, ratings of the contractors will be displayed. These ratings are based on previous user experiences with contractors.\n\n\t
     The contracts are area- specific, meaning that the search result will display only the contractors who have selected to work in specific area-codes. \n\n\t
     Users can register for a free account through the application.\n\n\t
     If you are a contractor please refer to the website.</string>
    <string name="back">Return</string>
    <string name="create_job">Create Job</string>
    <string name="rate_contractor">Review Contracts</string>
    <string name="account_info">Account Info</string>
    <string name="log_out">Log Out</string>
    <string name="registration">Registration</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="billing_address">Billing Address</string>
    <string name="street_address">Street Address</string>
    <string name="additional_info_optional_">Additional Info (optional)</string>
    <string name="city">City</string>
    <string name="state_province">State/Province</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_splash">Splash</string>
    <string name="welcome_to_contract_out">Welcome to Contract Out</string>
    <string name="select_job_type">Select Job Type</string>
    <string name="select_job_subtype">Select Job Subtype</string>
    <string name="job_description_optional_">Job Description</string>
    <string name="job_address">Job Address</string>
    <string name="use_billing_address">Use Billing Address</string>
    <string name="earliest_start_date">Earliest Start Date</string>
    <string name="mm">MM</string>
    <string name="_">/</string>
    <string name="dd">DD</string>
    <string name="price_limit">Price Limit ($)</string>
    <string name="latest_start_date">Latest Start Date</string>
    <string name="minimum_ratings">Minimum Ratings</string>
    <string name="friendliness">Friendliness</string>
    <string name="quality">Quality</string>
    <string name="timeliness">Timeliness</string>

    <string-array name="job_type_array">
        <item>Cleaning</item>
        <item>Yardwork</item>
        <item>General Repairs</item>
        <item>Home Improvements</item>
        <item>Plumbing</item>
        <item>Pest Removal</item>
    </string-array>
    
    <string-array name="price_range_array">
        <item>$0-$50</item>
        <item>$50-$100</item>
        <item>$100-$250</item>
        <item>$250-$500</item>
        <item>$500-$750</item>
        <item>$750-$1000</item>
        <item>$1000-$1500</item>
        <item>$1500-$3000</item>
        <item>>$3000+</item>
    </string-array>

    <string name="title_activity_review_contracts">ReviewContractsActivity</string>
    <string name="completed_contracts">Completed Contracts</string>
    <string name="rate_completed_jobs">Rate Completed Jobs</string>
    <string name="review_pending_jobs">Review Pending Jobs</string>
    <string name="title_activity_pending_jobs">PendingJobsActivity</string>
    <string name="pending_jobs">Pending Jobs</string>
    <string name="no_pending_jobs">No Pending Jobs</string>
    <string name="title_activity_completed_jobs">CompletedJobsActivity</string>
    <string name="rate_job">Rate Job</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="n_a">N/A</string>
    <string name="next_3_jobs">Next 3 Jobs</string>
    <string name="title_activity_rate_contractor">RateContractorActivity</string>
    <string name="contractor_name">Contractor Name</string>
    <string name="finish_date">Finish Date</string>
    <string name="accept_contract_offers">Accept Contract Offers</string>
    <string name="title_activity_contract_offers">ContractOffersActivity</string>
    <string name="avaliable_contractors">Available Contractors</string>
    <string name="inspect">Inspect</string>
    <string name="title_activity_inspect_contractor">InspectContractorActivity</string>
    <string name="select_for_contract">Select for Contract</string>
    <string name="max_price">Price Range</string>
    <string name="job_type">Job Type</string>
    <string name="job_city">Job City</string>
    <string name="job_zip">Job Zip</string>
    <string name="price_">Price ($)</string>

</resources>
