<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="860dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:text="@string/account_info"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

        <Button
            android:id="@+id/return_button_account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phone_number"
            android:layout_below="@+id/phone_number"
            android:layout_marginTop="40dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/update_account_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/return_button_account_info"
            android:layout_alignRight="@+id/phone_number"
            android:text="@string/update" />

        <EditText
            android:id="@+id/street_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/billing_address_title"
            android:layout_below="@+id/billing_address_title"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/street_address"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/additional_street_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/street_address"
            android:layout_alignRight="@+id/street_address"
            android:layout_below="@+id/street_address"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/additional_info_optional_"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/additional_street_info"
            android:layout_below="@+id/additional_street_info"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/state"
            android:layout_below="@+id/state"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/zip_postal_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/city"
            android:layout_below="@+id/city"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/state_province"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/zipcode"
            android:layout_below="@+id/zipcode"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <TextView
            android:id="@+id/billing_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/change_password_button"
            android:layout_below="@+id/change_password_button"
            android:layout_marginTop="20dp"
            android:text="@string/billing_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/email_account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_title"
            android:layout_alignRight="@+id/registration_title"
            android:layout_below="@+id/registration_title"
            android:layout_marginTop="20dp"
            android:text="@string/e_mail"
            android:textSize="16sp" />

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email_account_info"
            android:layout_alignRight="@+id/email_account_info"
            android:layout_below="@+id/email_account_info"
            android:layout_marginTop="20dp"
            android:text="@string/change_password" />

    </RelativeLayout>

</ScrollView>
