<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="860dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/registration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/registration_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registration_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/regestration_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_title"
            android:layout_below="@+id/registration_email"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/regestration_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_email"
            android:layout_below="@+id/regestration_password"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/billing_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/regestration_password"
            android:layout_alignRight="@+id/registration_email"
            android:layout_below="@+id/regestration_confirm_password"
            android:layout_marginTop="30dp"
            android:text="@string/billing_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/registration_street_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/billing_address_title"
            android:layout_below="@+id/billing_address_title"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/street_address"
            android:inputType="textEmailAddress|textPostalAddress" />

        <EditText
            android:id="@+id/registration_additional_street_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_street_address"
            android:layout_alignRight="@+id/registration_street_address"
            android:layout_below="@+id/registration_street_address"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/additional_info_optional_"
            android:inputType="textEmailAddress|textPostalAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/registration_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_additional_street_info"
            android:layout_below="@+id/registration_additional_street_info"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="text|textEmailAddress" />

        <EditText
            android:id="@+id/registration_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/regestration_confirm_password"
            android:layout_below="@+id/registration_city"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/state_province"
            android:inputType="text|textEmailAddress" />

        <EditText
            android:id="@+id/registration_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_city"
            android:layout_below="@+id/registration_state"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/zip_postal_code"
            android:inputType="number" />

        <EditText
            android:id="@+id/registration_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_zipcode"
            android:layout_below="@+id/registration_zipcode"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/return_button_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/registration_phone_number"
            android:layout_below="@+id/registration_phone_number"
            android:layout_marginTop="40dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/confirm_button_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/return_button_registration"
            android:layout_alignRight="@+id/registration_phone_number"
            android:text="@string/confirm" />

    </RelativeLayout>

</ScrollView>
