<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <Button
        android:id="@+id/create_job_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registration_title"
        android:layout_alignRight="@+id/registration_title"
        android:layout_below="@+id/registration_title"
        android:layout_marginTop="28dp"
        android:text="@string/create_job" />

    <Button
        android:id="@+id/rate_contractor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_info_button"
        android:layout_alignRight="@+id/account_info_button"
        android:layout_below="@+id/account_info_button"
        android:layout_marginTop="18dp"
        android:text="@string/rate_contractor" />

    <Button
        android:id="@+id/account_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_job_button"
        android:layout_alignRight="@+id/create_job_button"
        android:layout_below="@+id/create_job_button"
        android:layout_marginTop="20dp"
        android:text="@string/account_info" />

    <Button
        android:id="@+id/info_button_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registration_title"
        android:layout_below="@+id/rate_contractor_button"
        android:layout_marginTop="50dp"
        android:text="@string/info" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/info_button_b"
        android:layout_alignRight="@+id/registration_title"
        android:text="@string/log_out" />

</RelativeLayout>
