<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/change_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/change_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/email_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_password_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/e_mail"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/old_password"
        android:layout_alignRight="@+id/old_password"
        android:layout_below="@+id/old_password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_password"
        android:layout_alignRight="@+id/new_password"
        android:layout_below="@+id/new_password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/return_button_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirm_new_password"
        android:layout_below="@+id/confirm_new_password"
        android:layout_marginTop="20dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/confirm_button_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/return_button_change_password"
        android:layout_alignBottom="@+id/return_button_change_password"
        android:layout_alignRight="@+id/confirm_new_password"
        android:text="@string/confirm" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/change_password_title"
        android:layout_alignRight="@+id/change_password_title"
        android:layout_below="@+id/email_change_password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>
