<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/Job1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/rate_contractor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <Button
        android:id="@+id/review_completed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/review_pending_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/rate_completed_jobs" />

    <Button
        android:id="@+id/review_pending_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/review_completed_button"
        android:layout_below="@+id/Job1"
        android:layout_marginTop="39dp"
        android:text="@string/review_pending_jobs" />

    <Button
        android:id="@+id/review_contracts_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/review_completed_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/back" />

</RelativeLayout>