<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CompletedJobsActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/completed_jobs"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Job2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Job1"
        android:layout_below="@+id/Job1"
        android:layout_marginTop="30dp"
        android:text="@string/n_a"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Job3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Job2"
        android:layout_below="@+id/Job2"
        android:layout_marginTop="31dp"
        android:text="@string/n_a"
        android:textSize="20sp" />

    <Button
        android:id="@+id/completed_jobs_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Job3"
        android:layout_below="@+id/Job3"
        android:layout_marginTop="70dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/next_3_jobs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/completed_jobs_return_button"
        android:layout_alignBottom="@+id/completed_jobs_return_button"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/next_3_jobs" />

    <Button
        android:id="@+id/rate_job_1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Job1"
        android:layout_alignBottom="@+id/Job1"
        android:layout_alignParentRight="true"
        android:text="@string/rate_job" />

    <Button
        android:id="@+id/rate_job_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Job2"
        android:layout_alignBottom="@+id/Job2"
        android:layout_alignLeft="@+id/rate_job_1_button"
        android:text="@string/rate_job" />

    <Button
        android:id="@+id/rate_job_3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Job3"
        android:layout_alignBottom="@+id/Job3"
        android:layout_alignRight="@+id/rate_job_2_button"
        android:text="@string/rate_job" />

    <TextView
        android:id="@+id/Job1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="40dp"
        android:text="@string/n_a"
        android:textSize="20sp" />

</RelativeLayout>