<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PendingJobsActivity" >

    <TextView
        android:id="@+id/Job1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/pending_jobs"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/Pending_Job_List"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Job1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="start"
        android:height="200dp"
        android:hint="@string/no_pending_jobs"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:width="300dp" />

    <Button
        android:id="@+id/pending_jobs_return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Pending_Job_List"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/back" />

</RelativeLayout>